# citify

./: .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Plans.md  README.md  cloudbuild-workers.yaml  cloudbuild.yaml  conftest.py  firebase.json  log.md  pyproject.toml  tasks.json
.github/workflows/: lint.yml
.memory/miniplan/: TASK-ACTIONPLAN-relocation-action-plan.md  TASK-ASYNC-PDF-report.md  TASK-C-adk-migration.md  TASK-CACHE-relevance-firestore.md  TASK-CC-cost-anomaly-hunter.md  TASK-CITYDATA-ssds-expand.md  TASK-D-translator-self-critique.md  TASK-E-concierge.md  TASK-F-self-healing-scraper.md  TASK-FISCAL-financial-indicators.md  TASK-FV4MERGE-reinfolib-bq.md  TASK-LLL-conversation-memory.md  TASK-N-discussion-timeline.md  TASK-ONBOARDING-priorities.md  TASK-POPFIX-reinfolib-null-estat.md  TASK-POPTREND-full-2000-2070.md  TASK-PP-reasoning-transparency.md  TASK-SUPPORT-relocation-support-matching.md  TASK-WATCHER-LV3-coordinator.md  TASK-WATCHER-slice1.md  TASK-WATCHER-slice2.md  TASK-WATCHERV2-P1.md  TASK-WATCHERV2-P2.md  TASK-WATCHERV2-P3.md  TASK-WATCHERV2-P4.md  TASK-WATCHERV2-P5.md  TASK-X-heatmap-agent.md  TASK-Z-trend-forecast.md
agents/: __init__.py  demo_adk_chain.py  demo_concierge.py
agents/_shared/: __init__.py  forbidden.py
agents/concierge/: __init__.py  adk_agent.py  adk_runner.py  main.py  memory.py  runner.py  schema.py  tools.py
agents/cost_hunter/: __init__.py  detector.py  main.py  schema.py  seed_loader.py
agents/critic/: main.py  (+2 more)
apps/api/: .dockerignore  Dockerfile  main.py  pyproject.toml
apps/api/imagen/: __init__.py  generate_interest_images.py
apps/api/rag/: __init__.py  __main__.py  corpus.py  export.py
apps/api/rag/tests/: test_rag.py
apps/api/scripts/: build_reinfolib_targets_full.py  fetch_estat_api.py  fetch_ssds_indicators.py  load_estat_stats.py  load_estat_v2.py  load_population_series.py  load_reinfolib_stats.py  load_ssds_stats.py  prep_estat_csv.py  prep_estat_population_history.py  probe_city_rss.py  ssds_config.json
apps/api/tests/: test_auth.py  test_compare_stats.py  test_concierge_endpoint.py  test_cost_health_endpoint.py  test_forecast_endpoint.py  test_heatmap_endpoint.py  test_load_reinfolib_stats.py  test_load_ssds_stats.py  test_muni_label.py  test_ops_endpoint.py  test_population_trend_endpoint.py  test_prep_estat_population_history.py  test_reactions.py  test_reasoning_endpoint.py  test_related_resolution.py  test_scraper_health_endpoint.py  test_timeline_endpoint.py  test_watcher_api.py
demo-video/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
docs/: AGENT_PROMPTS.md  ARCHITECTURE.md  AUTH_RUNBOOK.md  DATA_MODEL.md  DATA_SOURCES.md  DEMO_SCRIPT.md  FEATURES.md  GETTING_STARTED.md  GO_LIVE.md  PHASE_F_REINFOLIB.md  PHASE_F_REINFOLIB_v0.2.md  PHASE_F_REINFOLIB_v0.3.1.md  PHASE_F_REINFOLIB_v0.3.md  PROJECT.md  PROMPT_VERSIONS.md  RAG_RUNBOOK.md  SCHEDULE.md  TERRAFORM_GUIDE.md  UI_WIREFRAMES.md
notebooks/: phase_f_v4_colab.ipynb  phase_f_v4_colab_by_region.ipynb
pkg/: __init__.py  bq_sink.py  bq_sink_runner.py  municipality_map.py  pubsub.py
scrapers/: __init__.py
scripts/: update_active_municipalities.py
(+262 files in other folders)
