[project]
name = "citify-api"
version = "0.1.0"
description = "Citify FastAPI バックエンド — マルチエージェント AI で自治体議事録を若者向けに翻訳・配信"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yuji Matsumoto", email = "y.matsumoto@flux-g.com" }]

dependencies = [
    # Web フレームワーク
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # HTTP クライアント (国会 API, scrapers)
    "httpx>=0.27",

    # HTML パーサ (voices_asp / db_search / kensakusystem 系スクレイパー用)
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # RSS / Atom フィードパーサ (press_rss 用、B-7)
    "feedparser>=6.0",

    # データバリデーション + 設定管理
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Google Cloud (Cloud Run / Logging / Secret Manager / BigQuery / Vertex AI)
    "google-cloud-logging>=3.11",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-cloud-aiplatform>=1.71",
    # ADK (Agent Development Kit) — マルチエージェント協調基盤 (Plan C)
    "google-adk>=2.1,<3.0",
    "google-cloud-pubsub>=2.27",
    "google-cloud-firestore>=2.18",

    # 認証 (CITIFY_AUTH_MODE=firebase 時のみ実行時に使用。既定 demo では未使用)
    "firebase-admin>=6.5",

    # 構造化ログ
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    # Lint + Format
    "ruff>=0.7",

    # Test
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",  # FastAPI TestClient のため
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----------------------------------------------------------------------------
# Ruff: lint + format (AGENTS.md §4.2 準拠)
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# 推奨ルールセット (E/F/W/I/B は基本、UP/ASYNC は Python 3.12 + async FastAPI 向け)
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import order)
    "B",    # flake8-bugbear (一般的な bug pattern)
    "UP",   # pyupgrade (3.12 構文に modernize)
    "ASYNC", # flake8-async (async の落とし穴)
    "ARG",  # unused arguments
    "RET",  # 関数 return の改善
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length は formatter が処理
    "B008",   # FastAPI の Depends() で誤検知するため
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]  # テストでは未使用引数許可 (fixture)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------------
# Pytest: テスト設定
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# ----------------------------------------------------------------------------
# Hatchling: パッケージビルド設定
# ----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src"]
